--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-- aktuelle Zeit tracken -> Timetracker in Lattice einbauen / Zuweisungsoperator definieren
+- aktuelle Zeit tracken -> Timetracker in Lattice einbauen 
 - restart files schreiben
 - restart files nutzen
