updated todo list

--- a/TODO
+++ b/TODO
@@ -1,3 +1,2 @@
-- aktuelle Zeit tracken -> Timetracker in Lattice einbauen 
-- restart files schreiben
+- restart files schreiben -> Binaries nutzen, Preprocess und timetrack hinzufügen
 - restart files nutzen
