--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
 To Do
-- enable shear flow in Preprocessfile (shear rate)
 - use shear rate in main.cc
 - find indices of bubble Cells
 - cut and paste Cells from one Lattice to another
 - number of time steps for fully developed shear flow
-
+- process warnings
 
 Done
+- enable shear flow in Preprocessfile (shear rate)
