--- a/TODO
+++ b/TODO
@@ -2,7 +2,6 @@ To Do
 - use shear rate in main.cc
 - number of time steps for fully developed shear flow
 - check for static shear state
-- implement DimSet as struct 2D / 3D
 
 Done
 - C++11 in anderen Makefiles hinzufügen
@@ -10,3 +9,4 @@ Done
 - cut and paste Cells from one Lattice to another 
 - process warnings
 - enable shear flow in Preprocessfile (shear rate)
+- correct DimSet to int arrays
