--- a/TODO
+++ b/TODO
@@ -1,9 +1,11 @@
 To Do
+- analyze lateral Bubble motion 3D
 - use shear rate in main.cc
 - number of time steps for fully developed shear flow
 - check for static shear state
 
 Done
+- analyze lateral Bubble motion 2D
 - C++11 in anderen Makefiles hinzufügen
 - find indices of bubble Cells 
 - cut and paste Cells from one Lattice to another 
