--- a/TODO
+++ b/TODO
@@ -1,6 +1,4 @@
 To Do
-- fix numOfthreads in all cases
-- fix cut-out 3D
 - update preprocessFile in /example
 - analyze bubble position 3D
 - analyze lateral Bubble motion 3D
@@ -9,6 +7,8 @@ To Do
 - check for static shear state
 
 Done
+- fix numOfthreads in all cases
+- fixed cut-out 3D
 - write proper CSV files
 - update makefile for /translate
 - analyze bubble position 2D
