--- a/TODO
+++ b/TODO
@@ -1,11 +1,14 @@
 To Do
-- update preprocessFile in /example
+- centering in preprocess
+- initialize shear flow
+- Test alternative ways to determine velocities
 - analyze lateral Bubble motion 3D
 - use shear rate in main.cc
 - number of time steps for fully developed shear flow
 - check for static shear state
 
 Done
+- update preprocessFile in /example
 - fix numOfthreads in all cases
 - fixed cut-out 3D
 - write proper CSV files
